--- a/public/css/migraine.css
+++ b/public/css/migraine.css
@@ -8,26 +8,29 @@ body {
 }
 
 p {
-  margin-left: 15px;
+  margin-top: 50px;
+  padding: 0;
+  text-align: center;
+  color: red;
+  line-height: 0;
 }
 
 h2 {
-  margin: 0, 15px;
+  margin-top: 60px;
   padding: 0;
   text-align: center;
   font-size: 24px;
 }
 
-#profile h3,
+/*#profile h3,
 #profile h2 {
   text-align: left;
   margin-top: 30px;
   margin-bottom: 10px;
   margin-left: 12px;
-  /*padding: 0;*/
   font-size: 24px;
   padding: 10px 70px;
-}
+}*/
 
 #profile .profile_set h3 {
   font-size: 24px;
@@ -115,7 +118,7 @@ header nav ul li a {
 }
 
 form {
-  width: 50%;
+  width: 35%;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
@@ -222,9 +225,15 @@ th {
 }
 
 .error {
-  color: red;
+  margin-top: 50px;
+  padding: 0;
+  text-align: center;
 }
 
 .success {
   color: green;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+
 }
