--- a/public/css/migraine.css
+++ b/public/css/migraine.css
@@ -15,6 +15,8 @@ p {
   line-height: 0;
 }
 
+
+
 h2 {
   margin-top: 60px;
   padding: 0;
@@ -22,19 +24,12 @@ h2 {
   font-size: 24px;
 }
 
-/*#profile h3,
-#profile h2 {
-  text-align: left;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  margin-left: 12px;
-  font-size: 24px;
-  padding: 10px 70px;
-}*/
-
-#profile .profile_set h3 {
-  font-size: 24px;
-  margin-top: 50px;
+h3 {
+  margin-top: 60px;
+  padding: 0;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1px;
 }
 
 .profile_set {
@@ -44,22 +39,24 @@ h2 {
   position: relative;
 }
 
-.profile_set nav {
+/*.profile_set nav {
   position: absolute;
   top: 2px;
   right: 100px;
-}
+}*/
 
-.profile_set nav li {
+/*.profile_set nav li {
   float: none;
-}
+}*/
 
 .profile_set a {
   color: #373d62;
   text-decoration: none;
 }
 
-/*#373857*/
+a {
+  color: #373857;
+}
 
 li a {
   color: #373857;
@@ -181,7 +178,7 @@ fieldset label {
 
 select {
   border: none;
-  width: 20%;
+  width: 30%;
   background-color: rgba(136, 138, 176, 0.33);
   color: black;
   font-size: 14px;
@@ -194,7 +191,7 @@ select {
 }
 
 table {
-  margin: 0 auto;
+  margin: 50px auto;
   line-height: 22px;
   width: 80%;
   font-size: 16px;
