Add delete type

--- a/public/css/migraine.css
+++ b/public/css/migraine.css
@@ -215,6 +215,10 @@ margin: 0 auto;
 -webkit-font-smoothing: antialiased;
 }
 
+td form {
+  display: inline;
+}
+
 .output {
   width: 60%;
   font-size: 15px;
